wip styling landing page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,10 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-.triangle-up {
+/* .triangle-up {
 	width: 0;
 	height: 0;
 	border-left: 25px solid transparent;
 	border-right: 25px solid transparent;
 	border-bottom: 50px solid #555;
-}
+} */
